# electron

./: BUILD.gn
buildflags/: buildflags.gni
patches/chromium/: build_allow_electron_to_use_exec_script.patch
script/: get-git-version.py
script/lib/: get-version.js  utils.js
