# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

declare_args() {
  enable_views_api = true

  enable_pdf_viewer = true

  # Provide a fake location provider for mocking
  # the geolocation responses. Disable it if you
  # need to test with chromium's location provider.
  # Should not be enabled for release build.
  enable_fake_location_provider = !is_official_build

  # Enable Chrome extensions support.
  enable_electron_extensions = true

  # Enable Spellchecker support
  enable_builtin_spellchecker = true

  # The version of Electron.
  # Packagers and vendor builders should set the version string in the args
  # passed to the gn binary.
  electron_version = exec_script("//electron/script/get-git-version.py",
                                 [],
                                 "trim string",
                                 [
                                   ".git/packed-refs",
                                   ".git/HEAD",
                                 ])
}
